fixing the horizontal scroll issue

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,6 @@
 #root {
-  min-width: 100vw;
+  min-width: 0;
+  width: 100%;
   min-height: 100vh;
   margin: 0 auto;
   text-align: center;
